--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h3> <span> post : </span> front end developer </h3>
                 <h3> <span> language : </span> english </h3>
                 <h3> <span> hoobie : </span> Gyming, Travelling, listening podcast</h3>
-                <a href="Resume.pdf" download><button class="btn"> download CV <i class="fas fa-download"></i>
+                <a href="Raviraj_kudal_Resume.pdf" download><button class="btn"> download CV <i class="fas fa-download"></i>
                     </button></a>
             </div>
 
