--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="info">
                 <h3> <span> name : </span> Raviraj Kudal </h3>
-                <h3> <span> age : </span> 20 </h3>
+                <h3> <span> age : </span> 22 </h3>
                 <h3> <span> qualification : </span> Bachelor of Technology </h3>
                 <h3> <span> field of study : </span> Computer Science & Engg </h3>
                 <h3> <span> post : </span> Software Developer </h3>
@@ -135,6 +135,16 @@
             </div><br>
 
             <div class="skill-box">
+                <span class="title">Python</span>
+
+                <div class="skill-bar">
+                    <span class="skill-per python">
+                        <span class="tooltip">90%</span>
+                    </span>
+                </div>
+            </div><br>
+
+            <div class="skill-box">
                 <span class="title">CSS</span>
 
                 <div class="skill-bar">
@@ -149,15 +159,6 @@
                 <div class="skill-bar">
                     <span class="skill-per bootstrap">
                         <span class="tooltip">80%</span>
-                    </span>
-                </div>
-            </div><br>
-            <div class="skill-box">
-                <span class="title">Python</span>
-
-                <div class="skill-bar">
-                    <span class="skill-per python">
-                        <span class="tooltip">75%</span>
                     </span>
                 </div>
             </div><br>
@@ -188,6 +189,16 @@
                     </span>
                 </div>
             </div>
+            
+            <div class="skill-box">
+                <span class="title">Java</span>
+
+                <div class="skill-bar">
+                    <span class="skill-per java">
+                        <span class="tooltip">50%</span>
+                    </span>
+                </div>
+            </div><br>
         </div>
 
     </section>
