--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h3> <span> post : </span> Software Developer </h3>
                 <h3> <span> language : </span> English </h3>
                 <h3> <span> hoobie : </span> Gyming, Travelling, Listening podcast</h3>
-                <a target="_blank" href="https://drive.google.com/file/d/19Z-2CTyhzDR_llE94grD2dQqPi9qWcJV/view?usp=drivesdkDialog" download><button class="btn"> download CV <i class="fas fa-download"></i>
+                <a target="_blank" href="https://drive.google.com/file/d/16wsVoU3QbLyexe4cv-gWpUmaOhLEIHwc/view" download><button class="btn"> download CV <i class="fas fa-download"></i>
                     </button></a>
             </div>
         </div>
